--- a/simpleBookStore.html
+++ b/simpleBookStore.html
@@ -7,5 +7,6 @@
    <link href="simpleBookStore.css">
    <body>
        <script src='simpleBookStore.js'></script>
+       <script src="https://gist.github.com/jaidevd/23aef12e9bf56c618c41.js"></script>
    </body>
 </html>
